--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ android {
 }
 
 dependencies {
+    compile project(path: ':volley')
+
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.okhttp:okhttp:1.5.1'
 }
